/* No comment provided by engineer. */
" has been added to your list" = " has been added to your list";

/* No comment provided by engineer. */
" has been removed from your list" = " has been removed from your list";

/* No comment provided by engineer. */
" Has Sent You An Invitation" = " Has Sent You An Invitation";

/* No comment provided by engineer. */
" min" = " min";

/* No comment provided by engineer. */
" points." = " points.";

/* No comment provided by engineer. */
" to  at  have been sent" = " to  at  have been sent";

/* No comment provided by engineer. */
" Worth " = " Worth ";

/* No comment provided by engineer. */
": None" = ": None";

/* No comment provided by engineer. */
"\"" = "\"";

/* No comment provided by engineer. */
"Accepted" = "Accepted";

/* No comment provided by engineer. */
"Add your Favorite Attractions to Your List" = "Add your Favorite Attractions to Your List";

/* n/a */
"Alerts" = "Alerts";

/* n/a */
"All Notifications" = "All Notifications";

/* No comment provided by engineer. */
"Challenges use the Gamification service, running on IBM Bluemix, to engage visitors and influence behavior." = "Challenges use the Gamification service, running on IBM Bluemix, to engage visitors and influence behavior.";

/* n/a */
"Compete against your friends and others to earn badges and exclusive offers." = "Compete against your friends and others to earn badges and exclusive offers.";

/* No comment provided by engineer. */
"Favorited" = "Favorited";

/* n/a */
"Filter Inbox" = "Filter Inbox";

/* No comment provided by engineer. */
"Gamification & Rewards" = "Gamification & Rewards";

/* No comment provided by engineer. */
"Invitation has been accepted!" = "Invitation has been accepted!";

/* n/a */
"Invitations" = "Invitations";

/* No comment provided by engineer. */
"Let’s Get Social!" = "Let’s Get Social!";

/* No comment provided by engineer. */
"min wait" = "min wait";

/* No comment provided by engineer. */
"Minimum Height Requirement" = "Minimum Height Requirement";

/* No comment provided by engineer. */
"Multi-Channel Experience" = "Multi-Channel Experience";

/* No comment provided by engineer. */
"No Items in List" = "No Items in List";

/* No comment provided by engineer. */
"No wait" = "No wait";

/* No comment provided by engineer. */
"Notification Details" = "Notification Details";

/* No comment provided by engineer. */
"Off" = "Off";

/* No comment provided by engineer. */
"Player's Score" = "Player's Score";

/* No comment provided by engineer. */
"Presence Insights enables a tailored user experience. Park guests can view their location, people, and places of interest." = "Presence Insights enables a tailored user experience. Park guests can view their location, people, and places of interest.";

/* No comment provided by engineer. */
"Recieve automated wait time alerts, ride status, and proximity alerts for favorited attractions." = "Recieve automated wait time alerts, ride status, and proximity alerts for favorited attractions.";

/* No comment provided by engineer. */
"Ride Wait Time" = "Ride Wait Time";

/* No comment provided by engineer. */
"Showcase Intelligent, Location-Based Services" = "Showcase Intelligent, Location-Based Services";

/* No comment provided by engineer. */
"Visiting a venue is a social experience. Users can generate messages and invite their friends to attractions from within the app." = "Visiting a venue is a social experience. Users can generate messages and invite their friends to attractions from within the app.";

/* No comment provided by engineer. */
"Visitors can use large displays as a natural extension of their phones to enhance mapping, offers, and engagement." = "Visitors can use large displays as a natural extension of their phones to enhance mapping, offers, and engagement.";

/* No comment provided by engineer. */
"Your Score" = "Your Score";

