...
/* Class = "UITabBarItem"; title = "Challenges"; ObjectID = "gxC-Zm-5vA"; */
"gxC-Zm-5vA.title" = "Challenges";

/* Class = "UITabBarItem"; title = "Home"; ObjectID = "kvs-wU-Gk7"; */
"kvs-wU-Gk7.title" = "Home";

/* Class = "UIButton"; normalTitle = "Skip Tutorial"; ObjectID = "mUh-mD-wfb"; */
"mUh-mD-wfb.normalTitle" = "Skip Tutorial";

/* Class = "UIImageView"; accessibilityIdentifier = "POIIcon"; ObjectID = "nfb-2s-76J"; */
"nfb-2s-76J.accessibilityIdentifier" = "POIIcon";

/* Class = "UILabel"; accessibilityIdentifier = "POIName"; ObjectID = "qHe-xA-AqW"; */
...
/* Class = "UILabel"; text = "Point of Interest Name"; ObjectID = "qHe-xA-AqW"; */
"qHe-xA-AqW.text" = "Point of Interest Name";

/* Class = "UITabBarItem"; title = "Home"; ObjectID = "s0M-hK-qU8"; */
"s0M-hK-qU8.title" = "Home";

/* Class = "UITabBarItem"; title = "Inbox"; ObjectID = "s7g-cN-jD2"; */
"s7g-cN-jD2.title" = "Inbox";

/* Class = "UILabel"; accessibilityIdentifier = "filterLabel"; ObjectID = "wA5-4S-w68"; */
"wA5-4S-w68.accessibilityIdentifier" = "filterLabel";

/* Class = "UILabel"; text = "Entertainment"; ObjectID = "wA5-4S-w68"; */
...
