...
    */
    func setupNavigationBar() {
        
        navigationController?.setNavigationBarHidden(false, animated: true)
        
        // Setup back button as just an arrow
        let backButton = UIBarButtonItem(image: UIImage(named: "back"), style: UIBarButtonItemStyle.Done, target: self, action: Selector("popVC"))
        self.navigationItem.leftBarButtonItem = nil
        self.navigationItem.leftBarButtonItem = backButton
        if let challenge = challenge {
            self.title = challenge.name
        }
        
...
