...
    Sets content in tutorial screen based on the controller's index
    */
    func setContent(contentViewController:OnboardingContentViewController) {
        switch(contentViewController.itemIndex) {
        case 0:
            contentViewController.titleText = NSLocalizedString("Showcase Intelligent, Location-Based Services", comment: "")
            contentViewController.imageName = "onboarding_2"
            contentViewController.descriptionText = NSLocalizedString("Presence Insights enables a tailored user experience. Park guests can view their location, people, and places of interest.", comment: "")
            return
        case 1:
            contentViewController.titleText = NSLocalizedString("Multi-Channel Experience", comment: "")
            contentViewController.imageName = "onboarding_5"
            contentViewController.descriptionText = NSLocalizedString("Visitors can use large displays as a natural extension of their phones to enhance mapping, offers, and engagement.", comment: "")
...
